--- a/client/src/HomePage.css
+++ b/client/src/HomePage.css
@@ -410,6 +410,7 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  width: 100%;
 }
 
 .blog-card {
@@ -422,6 +423,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  min-width: 0;
 }
 
 .blog-card:hover {
@@ -460,7 +462,7 @@
   color: #1f2937;
   margin: 0.5rem 0.75rem 0.25rem;
   line-height: 1.3;
-  flex-grow: 1;
+  min-height: 2.6em;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -472,6 +474,7 @@
   color: #6b7280;
   margin: 0 0.75rem 0.5rem;
   line-height: 1.4;
+  min-height: 2.8em;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
